css/main.css
body {
    font-family: "Open Sans";
    font-size: 2em;
}

.text-center {
    text-align: center;
}

.title {
    margin-top: 7%;
}

.title h1 {
    font-size: 8.0rem;
    color: #0084FF;
}

ol li {
    font-size: 4.0rem;
}

.get-started-img-container {
    display: flex;
    align-items: center;
    flex-direction: column;
    margin: 30px auto;
    background: url(../images/getting-started.png);
    background-size: contain;
    background-repeat: no-repeat;
    border: 1px solid gray;

    /* Maintain a height:width ratio of 1.734*/
    width: 400px;
    height: 694px;
}

.call-to-action-container {
    display: flex;
    align-items: center;
    flex-direction: column;
    margin: 30px auto;
    background: url(../images/initial-msg.png);
    background-size: contain;
    background-repeat: no-repeat;
    border: 1px solid gray;

    /* Maintain a height:width ratio of 1.734*/
    width: 400px;
    height: 694px;
}

.carousel-container {
    display: inline-flex;
    align-items: center;
    flex-direction: column;
    background: url(../images/carouselelement.png);
    background-size: contain;
    background-repeat: no-repeat;
    border: none;
    margin: 0;

    /* Maintain a height:width ratio of 1.734*/
    width: 280px;
    height: 486px;
}

.business-name-header {
    position: relative;
    top: 5px;
    height: 1.5rem;
    font-size: 1.3rem;
    color: gray;
}

.business-name-input {
    position: relative;
    top: 60px;
    border: 0.5px solid lightgray;
    font-size: 3.0rem;
    height: 3.0rem;
    margin: 10px;
    padding: 10px;
    text-align: center;
}

.get-started-text {
    position: relative;
    top: 350px;
    font-size: 1.5rem;
    color: gray;
    width: 340px;
    padding: 10px;
    text-align: center;
    resize: vertical;
    max-height: 150px;
}

.call-to-action-image {
    border: none;
    align-self: flex-start;
    position: relative;
    top: 55px;
    left: 62px;
    font-size: 1.5rem;
    color: black;
    font-weight: 900;
    width: 270px;
    padding: 5px;
    text-align: left;
    min-height: 136px;
    border: 1px solid #eee;
    border-radius: 10px 10px 0 0;
}

.call-to-action-title {
    border: none;
    align-self: flex-start;
    margin: 0;
    position: relative;
    font-size: 1.5rem;
    color: black;
    font-weight: 900;
    width: 270px;
    padding: 0, 5px;
    text-align: left;
    resize: none;
    height: auto;
}

.call-to-action-subtitle {
    border: none;
    align-self: flex-start;
    position: relative;
    font-size: 1.25rem;
    color: grey;
    font-weight: 900;
    width: 270px;
    padding: 0, 5px;
    text-align: left;
    resize: none;
    margin: 0;
}

.image-preview {
    position: relative;
    overflow: hidden;
    background-color: #ffffff;
    color: #ecf0f1;
}

.image-preview input {
    line-height: 200px;
    font-size: 200px;
    position: absolute;
    opacity: 0;
    z-index: 10;
}

.image-preview label {
    position: absolute;
    opacity: 0.2;
    cursor: pointer;
    background-color: #bbb;
    color: black;
    width: 150px;
    height: 50px;
    font-size: 15px;
    line-height: 50px;
    text-transform: uppercase;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    margin: auto;
    text-align: center;
}

.call-to-action-title-encapsulate {
    border: none;
    align-self: flex-start;
    position: relative;
    top: 55px;
    left: 62px;
    font-size: 1.5rem;
    color: black;
    font-weight: 900;
    width: 270px;
    padding: 5px;
    text-align: left;
    resize: vertical;
    min-height: 105px;
}

.call-to-action-button-encapsulate {
    border: none;
    background: transparent;
    align-self: flex-start;
    position: relative;
    top: 60px;
    left: 62px;
    width: 270px;
    padding: 5px;
}

.call-to-action-button {
    border: none;
    background: transparent;
    position: relative;
    top: 15px;
    margin-bottom: 40px;
    font-size: 1.75rem;
    color: #1787FB;
    font-weight: 500;
    width: 270px;
    text-align: center;
    resize: none;
    max-height: 20px;
}

.carousel-image {
    border: 1px solid #eee;
    align-self: flex-start;
    position: relative;
    margin-top: 1px;
    font-size: 1.5rem;
    color: black;
    font-weight: 900;
    width: 262px;
    padding: 5px;
    text-align: left;
    min-height: 131px;
    margin-left: 2px;
    border-radius: 10px 10px 0 0;
}

.carousel-title {
    border: none;
    align-self: flex-start;
    margin: 0;
    position: relative;
    font-size: 1.5rem;
    color: black;
    font-weight: 900;
    width: 265px;
    padding: 0, 5px;
    text-align: left;
    resize: none;
    height: auto;
}

.carousel-subtitle {
    border: none;
    align-self: flex-start;
    position: relative;
    font-size: 1.25rem;
    color: grey;
    font-weight: 900;
    width: 265px;
    padding: 0, 5px;
    text-align: left;
    resize: none;
    margin: 0;
}

.carousel-title-encapsulate {
    border: none;
    align-self: flex-start;
    position: relative;
    top: 0px;
    left: 0px;
    font-size: 1.5rem;
    color: black;
    font-weight: 900;
    width: 270px;
    padding: 5px;
    text-align: left;
    resize: vertical;
    min-height: 105px;
}

.carousel-button-encapsulate {
    border: none;
    background: transparent;
    align-self: flex-start;
    position: relative;
    top: 5px;
    left: 0px;
    width: 270px;
    padding: 5px;
}

.carousel-button {
    border: none;
    background: transparent;
    position: relative;
    top: 10px;
    margin-bottom: 35px;
    font-size: 1.75rem;
    color: #1787FB;
    font-weight: 500;
    width: 270px;
    text-align: center;
    resize: none;
    max-height: 20px;
}

